<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.snq.nearbucks.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:src="@drawable/moby1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="The Money App!"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <!--        <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lblack"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin">


                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="42dp"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/et_si_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:ems="10"
                                android:hint="Email"
                                android:inputType="textEmailAddress"
                                android:padding="10dp"
                                android:textColor="@color/black" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/gray4" />

                            <EditText
                                android:id="@+id/et_si_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                                android:background="@color/white"
                                android:ems="10"
                                android:hint="Password"
                                android:inputType="textPassword"
                                android:padding="10dp"
                                android:textColor="@color/black" />

                            <Button
                                android:id="@+id/b_si_signIn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                                android:background="@color/accent"
                                android:textStyle="bold"
                                android:text="Sign In"
                                android:textColor="@color/white" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_si_newUser"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:padding="20dp"
                                    android:textStyle="bold"
                                    android:text="New User?"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:id="@+id/tv_si_forgotPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:textStyle="bold"
                                    android:padding="20dp"
                                    android:text="Forgot Password?"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                        </LinearLayout>
                    </RelativeLayout>-->
            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_half_margin"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:background="@color/white"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/accent"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/email_sign_up_redirect_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/flat_green"
                    android:text="@string/action_sign_up_redirect"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_si_newUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="New User?"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_sign_in_forgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:visibility="gone" />
                <Button
                    android:id="@+id/b_sign_in_with_fb"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:layout_height="wrap_content"
                    android:background="@color/flat_blue"
                    android:text="@string/action_sign_in_with_fb"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b_sign_in_with_google"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/flat_red"
                    android:text="@string/action_sign_in_with_google"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
