<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qblack"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.snq.nearbucks.fragment.QAFragment">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_add_productPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/vento" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center"
                    android:layout_weight="1"
                    android:background="@color/lblack"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_add_productName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="Product"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_add_companyName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:text="Company"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_qa_close"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_arrow_back_white_24dp" />

                </LinearLayout>
            </FrameLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbars="none">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/tv_add_question"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/dummy_question"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/primary_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_add_option1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_half_margin"
                            android:background="@color/accent"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/dummy_option1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_add_option2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_half_margin"
                            android:background="@color/accent"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/dummy_option2"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_add_option3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_half_margin"
                            android:background="@color/accent"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/dummy_option3"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_add_option4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_half_margin"
                            android:background="@color/accent"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/dummy_option4"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_add_previous"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/gray_light_5"
                    android:text="@string/action_previous"
                    android:tint="@color/gray5"
                    android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_add_next"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:tint="@color/gray5"
                    android:background="@color/gray_light_5"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
                    android:text="@string/action_next"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

